clean fixed docker build